# sksevr-cmake-mirror

./: LICENSE.txt  README.md
common/: CMakeLists.txt  common_vc14.vcxproj
common/x64_v143/Debug/common_vc14.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sksevr/: CMakeLists.txt
sksevr/skse64/: CMakeLists.txt  skse64.vcxproj
sksevr/skse64/x64/Debug/: sksevr_1_4_15.dll.recipe  vc143.idb
sksevr/skse64/x64/Debug/skse64.tlog/: CL.16992.write.1.tlog  CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.write.1.tlog
sksevr/skse64_common/: CMakeLists.txt  skse64_common.vcxproj
sksevr/skse64_common/x64/Debug/skse64_common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
sksevr/skse64_loader/: CMakeLists.txt  skse64_loader.vcxproj
sksevr/skse64_loader/x64/Debug/: skse_version.res  sksevr_loader.exe.recipe  vc143.idb
sksevr/skse64_loader/x64/Debug/skse64_loader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.write.1.tlog
sksevr/skse64_loader_common/: CMakeLists.txt  skse64_loader_common.vcxproj
sksevr/skse64_loader_common/x64/Debug/skse64_l.FB6E1AEB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
sksevr/skse64_steam_loader/: CMakeLists.txt  skse64_steam_loader.vcxproj
sksevr/skse64_steam_loader/x64/Debug/: sksevr_steam_loader.dll.recipe  vc143.idb
sksevr/skse64_steam_loader/x64/Debug/skse64_s.F592B749.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.write.1.tlog  skse64_steam_loader.lastbuildstate
sksevr/x64/Debug/: skse64_common.idb  skse64_common.lib  skse64_loader_common.idb  skse64_loader_common.lib
sksevr/x64_v143/Debug/: common_vc14.idb  common_vc14.lib
